--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
-- Cambiare tutti gli endpoint con quelli delle stanze (anche da analizzare e mettere nella documentazione)
-
+- In "join room" mandare l'evento agli altri giocatori sulla socket e ritornare l'elenco dei giocatori me compreso così da vederli subito ad interfaccia
+- Inserire su db anche il giocatore oltre alla stanza in caso di "create room" o "join room"
+- Avere un modo di identificare chi è il "capo" della stanza e può premere inizia
+- All'inizio di una partita salvare le informazioni su db in modo da poter avvisare eventuali giocatori che entrano in partita ma non sono ancora sulla socket
 
